[package]
name = "golem"
version = "0.1.0"
authors = ["Nick Cuthbert <nick@cuthbert.co.za>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.0"
rusty_v8 = "0.3.11"
serde = "1.0.106"
serde_json = "1.0.51"