[package]
name = "golem"
version = "0.1.0"
authors = ["Nick Cuthbert <nick@cuthbert.co.za>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
lazy_static = "1.4.0"
actix-rt = "1.1.0"
rusty_v8 = "0.4.0"
serde = "1.0.106"
serde_json = "1.0.51"
downcast-rs = "1.1.1"
reqwest = { version = "0.10.4", features = ["json", "blocking"] }
tokio = { version = "0.2.19", features = ["full"] }
http = "0.2.1"
